[tool.poetry]
name = "sparkvis"
version = "0.2.0"
description = ""
authors = ["Shawn Presser <shawnpresser@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
sparklines = "^0.4.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
